# Changelog

## Version 5.10.0

* Adding global disable interlace check (thanks to Wontell)
* Changing profile bitrate selector to be text field (thanks to Wontell)
* Fixing #637 saving temp files for seven days to allow for better debug and recovery (thanks to marillat)
* Fixing #638 switching archived library appdirs to maintained platformdirs (thanks to marillat)
* Fixing x265 passlog file name was not being applied properly

## Version 5.9.0

* Adding QP mode for FFmpeg Nvenc encoding
* Adding more preview positions
* Adding ultra high quality mode for ffmpeg nvenc encoder
* Adding Ubuntu 24.04 builds
* Adding #633 download for stable version of ffmpeg by default on Windows (thanks to Maddie Davis)
* Fixing #611 Extension type not being selected properly from profiles if encoders isn't switched (thanks to Hankuu)
* Fixing #628 Custom QP/CRF saved in profile may not be restored correctly (thanks to Gregorio O. DeMojeca)
* Fixing #631 VVC Level can't be set to 0 anymore (thanks to GT500org)
* Removing Ubuntu 20.04, 22.04 and Mac 12 builds

## Version 5.8.2

* Fixing #610 Do not try to divide by zero if HDR metadata has bad values (thanks to Noelle Leigh)
* Fixing #616 replace correct cmd line option for IDC level (thanks to pkleinejaeger)
* Fixing too long of log file names could crash, limiting filename to 220 characters (thanks to ProFile)
* Removing code signing as cert has expired

## Version 5.8.1

* Fixing #598 'dict' object has no attribute 'to_yaml' (thanks to dmo marillat)
* Fixing #599 Italian language translations (thanks to bovirus)
* Fixing #600 Update NSIS installer script #601 to include Italian (thanks to bovirus)
* Fixing #603 Themes stylesheet aren't included in python package (thanks to dmo marillat)
* Fixing #605 HDR2SDR double tonemapping in Rigaya NVENC and QSV Encoders (thanks to Darksyderz)

## Version 5.8.0

* Adding #283 support for experimental DTS (dca) audio by adding -strict -2 (thanks to Sub7)